fixed minor styling changes for the portfolio page on dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -632,7 +632,7 @@
     color: #e2e8f0;
   }
 
-  h3 {
+  h1, h2, h3, h4, h5, h6 {
     color: #e2e8f0;
   }
   @media(max-width: 767px) {
